--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-dynamorse-sdi-io",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Dynamorse SDI IO nodes for Node-RED",
   "author": "Streampunk Media Ltd",
   "license": "Apache-2.0",
@@ -8,14 +8,19 @@
     "node-red"
   ],
   "dependencies": {
-    "macadam": "^0.2.6",
-    "promise": "^7.1.1"
+    "macadam": "^0.2.6"
   },
   "devDependencies": {
+    "dynamorse-test": "^0.1.1",
+    "eslint": "^4.9.0",
+    "eslint-config-google": "^0.9.1",
     "tape": "^4.6.3"
   },
   "scripts": {
-    "test": "tape test/*Spec.js"
+    "test": "tape test/*Spec.js",
+    "lint": "eslint **/*.js",
+    "lint-html": "eslint **/*.js -f html -o ./reports/lint-results.html",
+    "lint-fix": "eslint --fix **/*.js"
   },
   "node-red": {
     "nodes": {
