--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "node-red-contrib-dynamorse-sdi-io",
   "version": "0.1.6",
-  "description": "Dynamorse SDI IO nodes for Node-RED",
+  "description": "Dynamorse Blackmagic SDI IO nodes for Node-RED",
   "author": "Streampunk Media Ltd",
   "license": "Apache-2.0",
   "keywords": [
     "node-red"
   ],
   "dependencies": {
-    "macadam": "^0.2.6",
-    "promise": "^7.1.1"
+    "macadam": "^0.3.0"
   },
   "devDependencies": {
     "tape": "^4.6.3"
