--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       CIRCLE_ARTIFACTS: /tmp/circleci-artifacts
       CIRCLE_TEST_REPORTS: /tmp/circleci-test-results
     docker:
-    - image: circleci/node:8
+    - image: circleci/node:10
       command: /sbin/init
     steps:
     - checkout
@@ -31,7 +31,7 @@ jobs:
     - run: echo 'export PATH="~/Streampunk/node-red-contrib-dynamorse-sdi-io/node_modules/.bin:$PATH"' >> $BASH_ENV
     - run: mkdir -p $CIRCLE_TEST_REPORTS/eslint
     - run: mkdir -p $CIRCLE_TEST_REPORTS/xunit
-    - run: eslint **/*.js -f junit -o /tmp/circleci-test-results/eslint/eslint.xml
+    - run: eslint '**/*.js' -f junit -o /tmp/circleci-test-results/eslint/eslint.xml
     - run: set -eo pipefail && npm test | tap-xunit > /tmp/circleci-test-results/xunit/results.xml
       
     - store_test_results:
